force-app/main/default/objects/psa_Upgrade__c/psa_Upgrade__c.object-meta.xml
<CustomObject>
    <description>3D Printer upgrades</description>
    <label>Upgrade</label>
    <nameField>
        <label>Upgrade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upgrades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>