force-app/main/default/objects/psa_Upgrade__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost of upgrade</description>
    <label>Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>