force-app/main/default/objects/psa_Upgrade__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the upgrade</description>
    <label>Description</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>