force-app/main/default/objects/psa_Upgrade__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manufacturer of upgrade</description>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Upgrades</relationshipLabel>
    <relationshipName>Upgrades</relationshipName>
    <type>Lookup</type>
</CustomField>