force-app/main/default/objects/psa_Upgrade__c/fields/Printer__c.field-meta.xml
<CustomField>
    <fullName>Printer__c</fullName>
    <description>Master lookup to the Printer</description>
    <label>Printer</label>
    <referenceTo>psa_Printer__c</referenceTo>
    <relationshipLabel>Upgrades</relationshipLabel>
    <relationshipName>Upgrades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>