force-app/main/default/objects/psa_Upgrade__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Upgrade type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>efficiency</fullName>
            </value>
            <value>
                <fullName>quality</fullName>
            </value>
            <value>
                <fullName>performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>